--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homepage</title>
 </head>
+<header>
+    <h1>Homepage</h1>
+    <nav>
+        <ul>
+
+            <li><a href="Page1.html">Younes</a></li>
+            <li><a href="page2.html">Arda</a></li>
+            <li><a href="page3.html">Yantley</a></li>
+        </ul>
+    </li>
+
 <body>
     
 </body>
