--- a/page3.html
+++ b/page3.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <h1>Yantley Site</h1>
+    <nav>
+        <ul>
+
+            <li><a href="Page1.html">Younes</a></li>
+            <li><a href="page2.html">Arda</a></li>
+            <li><a href="page3.html">Yantley</a></li>
+        </ul>
+    </li>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yantley</title>
 </head>
 <body>
-    <h1>Yantley Site</h1>
 </body>
 </html>
