--- a/arda/index.html
+++ b/arda/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homepage</title>
 </head>
+    <style>
+    body{
+        background-color: blue;
+    }
+</style>
 <header>
     <h1>Homepage</h1>
     <nav>
